@@ -27,7 +27,6 @@ import java.util.ArrayList;
 import javax.mail.MessagingException;
 import javax.net.ssl.SSLContext;
 
-import org.apache.commons.codec.binary.Base64;
 import org.apache.http.conn.ssl.SSLConnectionSocketFactory;
 import org.apache.http.conn.ssl.SSLContexts;
 import org.apache.http.conn.ssl.TrustStrategy;
@@ -52,6 +51,8 @@ import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
+
+import sun.misc.BASE64Encoder;
 
 public class InsightsEmailService {
 	
@@ -79,7 +80,7 @@ public class InsightsEmailService {
 		String credential = ApplicationConfigProvider.getInstance().getUserId()+":"+
 				ApplicationConfigProvider.getInstance().getPassword();
 		byte[] credsBytes = credential.getBytes();
-		byte[] base64CredsBytes = Base64.encodeBase64(credsBytes);
+		byte[] base64CredsBytes = new BASE64Encoder().encode(credsBytes).getBytes();
 		String base64Creds = new String(base64CredsBytes);
 		HttpHeaders headers = new HttpHeaders();
 		headers.set(EmailConstants.ACCEPT, MediaType.APPLICATION_JSON_UTF8_VALUE);
@@ -90,7 +91,7 @@ public class InsightsEmailService {
 		HttpEntity<String> response = restTemplate.exchange(restUrl,HttpMethod.GET,entity,String.class);
 		JsonParser parser = new JsonParser(); 
 		JsonObject resultJson=new JsonObject();
-		resultJson= (JsonObject) parser.parse(response.getBody()).getAsJsonObject();
+		resultJson= parser.parse(response.getBody()).getAsJsonObject();
 		LOG.debug("Insights inference details received from service");
 		return resultJson;
 	}
@@ -172,8 +173,6 @@ public class InsightsEmailService {
 		} catch (UnsupportedEncodingException e) {
 			System.out.println(e.toString());
 		} catch (MessagingException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
 		}
 	   */
 	}
